--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.paulawaite.firstmavenwebapp</groupId>
-    <artifactId>firstmavenwebapp</artifactId>
+    <groupId>org.example</groupId>
+    <artifactId>workApp</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>First Maven Webapp</name>
+    <name>Work Application</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -22,7 +22,7 @@
 
 
     <build>
-        <finalName>firstmavenwebapp</finalName>
+        <finalName>workApp</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
