--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,12 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Stuff people shouldn't be looking at
+src/test/resources/cleandb.sql
+src/main/resources/database.properties
+src/main/resources/hibernate.cfg.xml
+src/main/resources/log4j2.properties
+src/main/resources/cognito.properties
+src/test/resources/hibernate.cfg.xml
+src/test/resources/database.properties
